--- a/index.html
+++ b/index.html
@@ -97,8 +97,12 @@
         </div>
         <!-- footer -->
         <div class="footer">
-            <p>© 2017 mcardenas </p>
+            <p>© 2017 <a href="https://www.linkedin.com/in/mfcardenas/" >mcardenas</a></p>
         </div>
+        <!--
+        Ejemplo barra de progreso para reproducción de videos locales con el tag "Video" de HTML5 y jQuery.
+        mCardenas 2017
+        -->
         <!-- //footer -->
     </section>
 </body>
